maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: type mismatch;
 found   : Unit
 required: Boolean
      angleSom = angleSom + keepHandOnSideWall(checkGauche())
                                                          ^Escaper:57: warning: enclosing method checkGauche has result type Unit: return value discarded
  return resultat
  ^